# ComfyUI-BiRefNet-Super

./: README.md  README_CN.md  README_EN.md  nodes.py  pyproject.toml  requirements.txt
js/: BiRefNet_Lite.js
rmbg/: birefnet_cod.py  birefnet_dis.py  birefnet_general.py  birefnet_general_lite.py  birefnet_hrsod.py  birefnet_massive.py  birefnet_portrait.py  session_factory.py
rmbg/sessions/: __init__.py  base.py
workflow/: video_workflow.json  workflow-onnx.json  workflow.json
