[project]
name = "comfyui-birefnet-lite"
description = "This repository packages the latest BiRefNet model as a ComfyUI node for use, supporting chunked loading on both CPU and GPU, as well as model caching features."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/rubi-du/ComfyUI-BiRefNet-lite"
#  Used by Comfy Registry https://comfyregistry.org

dependencies = ["numpy", "timm", "pymatting", "scikit-image","scipy"]

[tool.comfy]
PublisherId = "duhaifeng"
DisplayName = "ComfyUI-BiRefNet-lite"
Icon = ""
